test/files/neg/macro-invalidret-nonuniversetree/Impls_1.scala
import scala.reflect.macros.{Context => Ctx}

object Impls {
  def foo(c: Ctx) = scala.reflect.basis.Literal(scala.reflect.basis.Constant(42))
}
